--- a/webapp/src/app/pages/home/components/problem/components/history/history.component.html
+++ b/webapp/src/app/pages/home/components/problem/components/history/history.component.html
@@ -68,7 +68,7 @@
                                             <strong>
                                                 YourOutput:
                                             </strong>
-                                            {{case.Output || case.Stderr || "NULL"}}
+                                            {{case.Message || case.Output || case.Stderr || "NULL"}}
                                         </span>
                                     </p>
                                 </div>
