--- a/webapp/src/app/pages/home/home.component.html
+++ b/webapp/src/app/pages/home/home.component.html
@@ -24,6 +24,11 @@
         <div style="padding: 10px;">
             <button nbButton status="primary" (click)="createNewProblem()">New problem</button>
         </div>
+
+        <div style="padding: 10px;">
+            <button nbButton status="primary" (click)="manageProblem()">Your problem</button>
+        </div>
+
         <div style="padding:10px;">
             <button nbButton status="primary" (click)="signout()">Sign out</button>
         </div>
