--- a/webapp/src/app/pages/home/components/manage-problem/manage-problem.component.scss
+++ b/webapp/src/app/pages/home/components/manage-problem/manage-problem.component.scss
@@ -22,42 +22,50 @@ h1
     margin-right: 1%;
 }
 
-#list-problem
-{
-    margin: 0 auto;
-    width: 95%;
-    background-color: #edf1f7;
-}
+// #list-problem
+// {
+//     margin: 0 auto;
+//     width: 95%;
+//     background-color: #edf1f7;
+// }
 
-#your_problem
-{
-    padding-top: 1%;
-    width: 95%;
-    background-color: #edf1f7;
-    margin: 0 auto;
-    display: flex;
-}
+// #your_problem
+// {
+    
+//     width: 95%;
+//     background-color: #edf1f7;
+//     margin: 0 auto;
+//     display: flex;
+// }
 
-.Status
-{
-    width: 13.8%;
-    background-color: #edf1f7;
-}
+// .Status
+// {
+//     padding-top: 3%;
+//     width: 13.8%;
+//     background-color: #edf1f7;
+// }
 
-.Title
-{
-    width: 53%;
-    background-color: #edf1f7;
-}
+// .Title
+// {
+//     padding-top: 3%;
+//     width: 50%;
+//     background-color: #edf1f7;
+// }
 
-.Score
-{
-    width: 14%;
-    background-color: #edf1f7;
-}
+// .Score
+// {
+//     padding-top: 3%;
+//     width: 14%;
+//     background-color: #edf1f7;
+// }
 
-.Difficulty
-{
-    width: 15%;
-    background-color: #edf1f7;
-}
+// .Difficulty
+// {
+//     padding-top: 3%;
+//     width: 10%;
+//     background-color: #edf1f7;
+// }
+// .btn
+// {
+//     // padding-top: 1.5%;
+// }
