commit before pull

--- a/webapp/src/app/pages/home/components/manage-problem/manage-problem.component.scss
+++ b/webapp/src/app/pages/home/components/manage-problem/manage-problem.component.scss
@@ -22,12 +22,12 @@ h1
     margin-right: 1%;
 }
 
-// #list-problem
-// {
-//     margin: 0 auto;
-//     width: 95%;
-//     background-color: #edf1f7;
-// }
+#list_manage
+{
+    margin: 0 auto;
+    width: 95%;
+    background-color: #edf1f7;
+}
 
 // #your_problem
 // {
