--- a/webapp/src/app/pages/home/components/manage-problem/manage-problem.component.html
+++ b/webapp/src/app/pages/home/components/manage-problem/manage-problem.component.html
@@ -24,82 +24,28 @@
         </nb-select>
     </div>
 
-    <!-- <div id="list-problem" >
-        <div class="Ingredient" style="padding: 0.5% 0 0.5% 0;">
-            <label id="Ing-Sta" style="font-size: 25px; ">Status</label>
-            <label id="Ing-Tit" style="padding-left: 10.5%; font-size: 25px; ">Title</label>
-            <label id="Ing-Sco" style="padding-left: 47%; font-size: 25px; ">Score</label>
-            <label id="Ing-Dif" style="padding-left: 10%; font-size: 25px; ">Difficulty</label> 
-        </div>
-        <hr width="84%" align="center" style="margin: 0; "/>
+    <div id="list_manage">
+        <div class="table-wrap">
+            <table class="table">
+                <thead class="thead-primary">
+                    <tr>
+                        <th>Status</th>
+                        <th>Title</th>
+                        <th>Score</th>
+                        <th>Difficulty</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let problem of (problems$ | async); let i = index" class="problem">
+                        <th scope="row" class="scope" >{{problem.title}}</th>
+                        <td>{{problem.title}}</td>
+                        <td>{{problem.score}}</td>
+                        <td>{{problem.difficulty}}</td>
+                        <td><a href="#" class="btn btn-primary">Open</a></td>
+                    </tr>
+                </tbody>
+            </table> 
+        </div>    
     </div>
-
-    <div id="your_problem">
-
-        <div class="Status">
-            <nb-icon style="font-size: 25px;" icon="person-done-outline"></nb-icon>
-        </div>
-
-        <div class="Title">
-            <label class="Ing-Tit" style="padding-left: 1%; font-size: 25px; ">Fibbonaci</label>
-        </div>
-
-        <div class="Score">
-            <label class="Ing-Sco" style="padding-left: 8%; font-size: 25px; ">10</label>
-        </div>
-
-        <div class="Difficulty">
-            <label class="Ing-Dif" style="padding-left: 1%; font-size: 25px; ">Hard</label> 
-        </div>
-    </div>
-
-    <div id="your_problem">
-        <div class="Status">
-            <nb-icon style="font-size: 25px;" icon="person-done-outline"></nb-icon>
-        </div>
-
-        <div class="Title">
-            <label class="Ing-Tit" style="padding-left: 1%; font-size: 25px; ">Pytago</label>
-        </div>
-
-        <div class="Score">
-            <label class="Ing-Sco" style="padding-left: 8%; font-size: 25px; ">8</label>
-        </div>
-
-        <div class="Difficulty">
-            <label class="Ing-Dif" style="padding-left: 1%; font-size: 25px; ">Medium</label> 
-        </div>
-    </div> -->
-    <div class="table-wrap">
-        <table class="table">
-        <thead class="thead-primary">
-          <tr>
-            <th>Status</th>
-            <th>Title</th>
-            <th>Score</th>
-            <th>Difficulty</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row" class="scope" >problem.</th>
-            <td>1 Year</td>
-            <td>$70.00</td>
-            <td>$5.00</td>
-            <td>$5.00</td>
-            <td><a href="#" class="btn btn-primary">Open</a></td>
-          </tr>
-          
-          <tr>
-            <th scope="row" class="scope border-bottom-0">.me</th>
-            <td class="border-bottom-0">1 Year</td>
-            <td class="border-bottom-0">$45.00</td>
-            <td class="border-bottom-0">$5.00</td>
-            <td class="border-bottom-0">$5.00</td>
-            <td class="border-bottom-0"><a href="#" class="btn btn-primary">Open</a></td>
-          </tr>
-        </tbody>
-      </table>     
-   
 </div>
 
