--- a/webapp/src/app/pages/problem/components/editor/editor.component.html
+++ b/webapp/src/app/pages/problem/components/editor/editor.component.html
@@ -1,29 +1,40 @@
-<div class="tab">
-    <span>
-        <span class="tab-set">
-            <div>
-                <div *ngFor="let tab of codeTabs; index as i" class="tab-title" (click)="handleChangeTab(tab.id)"
-                    [ngClass]="{'active': tab.id === currentCodeTab!.id}">
-                    <div>New tab</div>
-                    <button nbButton size="small" shape="round" appearance="outline" status="primary"
-                        (click)="handleDeleteTab(tab.id)">
-                        <nb-icon icon="close-outline"></nb-icon>
-                    </button>
+<div class="container">
+    <div class="tab">
+        <span>
+            <span class="tab-set">
+                <div>
+                    <div *ngFor="let tab of codeTabs; index as i" class="tab-title" (click)="handleChangeTab(tab.id)"
+                        [ngClass]="{'active': tab.id === currentCodeTab!.id}">
+                        <div>New tab</div>
+                        <button nbButton size="small" shape="round" appearance="outline" status="primary"
+                            (click)="handleDeleteTab(tab.id)">
+                            <nb-icon icon="close-outline"></nb-icon>
+                        </button>
+                    </div>
                 </div>
-            </div>
+            </span>
+            <span class="add-tab" *ngIf="codeTabs.length < 4">
+                <button nbButton size="small" shape="round" appearance="outline" status="primary" (click)="createTab()">
+                    <nb-icon icon="plus-circle-outline"></nb-icon>
+                </button>
+            </span>
         </span>
-        <span class="add-tab" *ngIf="codeTabs.length < 4">
-            <button nbButton size="small" shape="round" appearance="outline" status="primary" (click)="createTab()">
-                <nb-icon icon="plus-circle-outline"></nb-icon>
-            </button>
+        <span>
+            <button nbButton size="medium" appearance="outline" status="primary" (click)="submit()">run</button>
         </span>
-    </span>
-    <span>
-        <button nbButton size="medium" appearance="outline" status="primary" (click)="submit()">run</button>
-    </span>
-</div>
-<div class="tool">
-</div>
-<div class="editor" *ngIf="currentCodeTab">
-    <ngx-monaco-editor [options]="editorOptions" [(ngModel)]="currentCodeTab.code"></ngx-monaco-editor>
+    </div>
+    <div class="tool">
+        <nb-select placeholder="Language" *ngIf="currentCodeTab" [selected]="currentCodeTab.currentLanguageID"
+            (selectedChange)="handleChangeLanguage($event)" size="small">
+            <nb-option *ngFor="let language of currentCodeTab.codes" [value]="language.languageID">
+                <span class="language">
+                    {{language.languageName}}
+                </span>
+            </nb-option>
+        </nb-select>
+    </div>
+    <div class="editor" *ngIf="currentCodeTab">
+        <ngx-monaco-editor [options]="editorOptions" [(ngModel)]="currentCodeTab.currentCode"
+            (init)="editorInit($event)"></ngx-monaco-editor>
+    </div>
 </div>
