--- a/webapp/src/app/pages/problem/components/editor/editor.component.scss
+++ b/webapp/src/app/pages/problem/components/editor/editor.component.scss
@@ -1,3 +1,11 @@
+.container {
+    height: 100%;
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+}
+
 .tab {
     display: flex;
     flex-direction: row;
@@ -6,7 +14,6 @@
 
     padding-left: 1rem;
     margin: 1rem 0rem;
-
 
     &>span {
         display: flex;
@@ -82,8 +89,9 @@
 
 .editor {
     width: 100%;
-    height: 100%;
+    flex: 1 1 auto;
     padding-left: 1rem;
+    padding-bottom: 1rem;
 }
 
 .tool {
@@ -100,4 +108,9 @@
     .tool-item {
         margin-left: 0.5rem;
     }
+}
+
+.language {
+    font-weight: 500;
+    font-size: 0.75rem;
 }
