--- a/webapp/src/app/pages/manage/yourmanage/yourmanage.component.html
+++ b/webapp/src/app/pages/manage/yourmanage/yourmanage.component.html
@@ -38,7 +38,7 @@
                     <div class="title">
                         <a (click)="viewProblem(problem)">{{problem.title}}</a>
                     </div>
-                    <div class="score">
+                    <div class="score">-
                         <span>{{ problem.score }}</span>
                     </div>
                     <div class="difficulty">
