--- a/webapp/src/app/components/navbar/navbar.component.scss
+++ b/webapp/src/app/components/navbar/navbar.component.scss
@@ -1,81 +1,86 @@
 .container {
-    width: 100%;
+  width: 100%;
 
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
-    font-size: 1.5rem;
-    font-weight: 600;
+  font-size: 1.5rem;
+  font-weight: 600;
 }
 
 .anchors {
+  & > a {
+    margin: 0 1rem;
+    font-size: 1.1rem;
+    font-weight: 500;
+    text-decoration: none;
 
-    &>a {
-        margin: 0 1rem;
-        font-size: 1.1rem;
-        font-weight: 500;
-        text-decoration: none;
+    transition: all 0.2s ease-in-out;
 
-        transition: all 0.2s ease-in-out;
-
-
-        &:hover {
-            color: #4dff89;
-            animation: infinite glow 1s ease-in-out;
-            transition: all 0.2s ease-in-out;
-        }
+    &:hover {
+      color: #4dff89;
+      animation: infinite glow 1s ease-in-out;
+      transition: all 0.2s ease-in-out;
     }
+  }
 }
 
-
 .user {
-    .profile {
-        padding: 0;
-        width: 2.5rem;
-        height: 2.5rem;
-        border: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .profile {
+    padding: 0;
+    width: fit-content;
+    height: 2.5rem;
+    border: 0;
 
-        transition: all 0.2s ease-in-out;
-
-        &>img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            border-radius: 50%;
-        }
-
-        &:hover {
-            cursor: pointer;
-            box-shadow: 0px 0px 5px #4dff89;
-            transition: all 0.2s ease-in-out;
-        }
-
-        &:focus {
-            outline: none;
-            box-shadow: 0px 0px 10px #4dff89;
-            transition: all 0.2s ease-in-out;
-        }
-
+    transition: all 0.2s ease-in-out;
+    & > img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 50%;
     }
+
+    &:hover {
+      cursor: pointer;
+      box-shadow: 0px 0px 5px #4dff89;
+      transition: all 0.2s ease-in-out;
+    }
+
+    &:focus {
+      outline: none;
+      box-shadow: 0px 0px 10px #4dff89;
+      transition: all 0.2s ease-in-out;
+    }
+  }
+
+  .user-name {
+    width: fit-content;
+    height: fit-content;
+    font-size: 1.1rem;
+    margin: 0 0 0 0.7rem;
+  }
 }
 
 @keyframes glow {
-    0% {
-        text-shadow: 0px 0px 0px #4dff89;
-        filter: brightness(1);
-    }
+  0% {
+    text-shadow: 0px 0px 0px #4dff89;
+    filter: brightness(1);
+  }
 
-    50% {
-        text-shadow: 0px 0px 5px #4dff89;
-        filter: brightness(1.2);
-    }
+  50% {
+    text-shadow: 0px 0px 5px #4dff89;
+    filter: brightness(1.2);
+  }
 
-    100% {
-        text-shadow: 0px 0px 0px #4dff89;
-        filter: brightness(1);
-    }
+  100% {
+    text-shadow: 0px 0px 0px #4dff89;
+    filter: brightness(1);
+  }
 }
