--- a/webapp/src/app/components/spinkit/spinkit.component.html
+++ b/webapp/src/app/components/spinkit/spinkit.component.html
@@ -9,7 +9,22 @@
         <path fill="#FFFFFF" d="M26.013,10.047l1.654-2.866c-2.198-1.272-4.743-2.012-7.466-2.012h0v3.312h0
     C22.32,8.481,24.301,9.057,26.013,10.047z">
             <animateTransform attributeType="xml" attributeName="transform" type="rotate" from="0 20 20" to="360 20 20"
-                dur="0.5s" repeatCount="indefinite" />
+                dur="1s" repeatCount="indefinite" />
+        </path>
+        <path fill="#FFFFFF" d="M26.013,10.047l1.654-2.866c-2.198-1.272-4.743-2.012-7.466-2.012h0v3.312h0
+    C22.32,8.481,24.301,9.057,26.013,10.047z">
+            <animateTransform attributeType="xml" attributeName="transform" type="rotate" from="-90 20 20"
+                to="270 20 20" dur="1s" repeatCount="indefinite" />
+        </path>
+        <path fill="#FFFFFF" d="M26.013,10.047l1.654-2.866c-2.198-1.272-4.743-2.012-7.466-2.012h0v3.312h0
+    C22.32,8.481,24.301,9.057,26.013,10.047z">
+            <animateTransform attributeType="xml" attributeName="transform" type="rotate" from="-180 20 20"
+                to="180 20 20" dur="1s" repeatCount="indefinite" />
+        </path>
+        <path fill="#FFFFFF" d="M26.013,10.047l1.654-2.866c-2.198-1.272-4.743-2.012-7.466-2.012h0v3.312h0
+    C22.32,8.481,24.301,9.057,26.013,10.047z">
+            <animateTransform attributeType="xml" attributeName="transform" type="rotate" from="-270 20 20"
+                to="90 20 20" dur="1s" repeatCount="indefinite" />
         </path>
     </svg>
 </div>
