--- a/webapp/src/app/pages/home/components/problemset/problemset.component.scss
+++ b/webapp/src/app/pages/home/components/problemset/problemset.component.scss
@@ -104,3 +104,8 @@ $select-margin: 1rem;
     justify-content: center;
     align-items: center;
 }
+
+.popover {
+    position: fixed;
+    background-color: black;
+}
